@@ -1,5 +1,13 @@
 2007-01-06  Benoît Dejean  <benoit@placenet.org>
 
+	* src/procdialogs.cpp:
+	* src/procman.h:
+
+	Merged some code about spin buttons in the preference dialog.
+	Fixed a bunch of warnings.
+	
+2007-01-06  Benoît Dejean  <benoit@placenet.org>
+
 	* src/interface.cpp:
 	
 	Fixed 2 little signedness issues.
